--- a/PunFixedRegion.csproj
+++ b/PunFixedRegion.csproj
@@ -14,6 +14,10 @@
     <PackageId>PunFixedRegion</PackageId>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <Optimize>true</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
